crates/vihaco-parser/tests/compile_errors/pattern_missing_field.stderr
error: must include all fields, missing right
 --> tests/compile_errors/pattern_missing_field.rs:8:13
  |
8 | #[pattern = "$left"]
  |             ^^^^^^^
